# AndroidRustExample

./: .gitignore
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/greetings/: MainActivity.kt  RustGreetings.kt
android/app/src/main/res/layout/: activity_main.xml
android/gradle/wrapper/: gradle-wrapper.properties
cargo/: Cargo.toml  build_android
cargo/src/: lib.rs
